# Ohtsuki-Tagger

./: .gitignore  CHANGELOG.md  Migrate0_2_XTo0_3_X.sql  Migrate0_3_1_0To0_3_2_0.sql  MigrateDB0_3_4_0To1_0_0_0.sql  MigratePyTaggerToHsTagger.sql  TaggerGUI.cabal  TaggerSchemaDefinition.sql  cabal.project  hie.yaml  patch0_3_4_0.sql  tagger.cabal  tagger.example.toml  taggerSchemaDef.sql  testconfig.toml  yuitagger.cabal
Doc/haddock/tagger-lib/: Database-Tagger-Script.html  Database-Tagger-Type-Lens.html  Database-Tagger-Type.html  Database-Tagger.html  doc-index.html  index.html  tagger.haddock
Patch/: patch_2_0.sql
app/: IO.hs  Main.hs
app/Config/: Window.hs
app/Database/Tagger/: Access.hs  Schema.hs  Script.hs  Type.hs
app/Database/Tagger/Access/: RowMap.hs
app/Database/TaggerNew/: Access.hs  Type.hs
app/Event/: CLI.hs  Handler.hs  Parser.hs  Task.hs
app/Event/CLI/: Type.hs
app/Event/Parser/: Type.hs
app/Node/: Application.hs  Base.hs  Color.hs  FileDb.hs  Micro.hs
app/Node/Micro/: Button.hs  Colors.hs  Core.hs  DescriptorTree.hs  EntryWidget.hs  ImagePreview.hs  Prim.hs  TextField.hs
app/Type/: BufferList.hs  Config.hs  Model.hs
app/Type/Model/: Prim.hs
app/Util/: Core.hs
app/Window/: Core.hs  Main.hs
app/tagger/: Class.hs  Config.hs  Interface.hs  Main.hs  Util.hs
app/tagger/CLI/: Data.hs  Opt.hs  Parser.hs
app/tagger/CLI/Data/: Lens.hs
app/tagger/Component/: DescriptorTree.hs  FocusedFile.hs  Tagger.hs
app/tagger/Component/DescriptorTree/: Event.hs  Model.hs
app/tagger/Component/DescriptorTree/Model/: Core.hs  Lens.hs
app/tagger/Component/FocusedFile/: Event.hs  Handler.hs  Model.hs
app/tagger/Component/FocusedFile/Model/: Core.hs  Lens.hs
app/tagger/Component/Tagger/: Event.hs  Handler.hs  Model.hs
app/tagger/Component/Tagger/Model/: Core.hs  Lens.hs
app/tagger/Data/: Config.hs  Event.hs  Model.hs  QueryBuilder.hs
app/tagger/Data/Config/: Internal.hs  Lens.hs
app/tagger/Data/Model/: Core.hs  Internal.hs  Lens.hs  Shared.hs
app/tagger/Data/Model/Internal/: Config.hs
app/tagger/Data/Model/Shared/: Core.hs  Lens.hs
app/tagger/Data/QueryBuilder/: AST.hs
app/tagger/Data/QueryBuilder/AST/: Core.hs  Lens.hs
app/tagger/Interface/: Handler.hs  Theme.hs  Widget.hs
app/tagger/Interface/Handler/: Internal.hs  QueryBuilder.hs  WidgetQueryRequest.hs
app/tagger/Interface/Widget/: Internal.hs
app/tagger/Interface/Widget/Internal/: Core.hs  DescriptorTree.hs  FileDetail.hs  FilePreview.hs  InfoPanel.hs  Query.hs  Selection.hs  Type.hs
app/tagger/Interface/Widget/Internal/Composite/: QueryBuilder.hs
app/tagger/Interface/Widget/Internal/Query/: QueryBuilder.hs
app/tagger/Type/: WidgetBuilder.hs
app/tagger/Type/WidgetBuilder/: NodeBuilder.hs  StackBuilder.hs
app/taggercli/: Main.hs  Opt.hs
app/taggercli/Opt/: Data.hs  Parser.hs
app/taggercli/Opt/Data/: Lens.hs
app/taggerold/: IO.hs
app/taggerold/Event/: Parser.hs  Task.hs
app/taggerold/Node/: Application.hs  Color.hs  Micro.hs
app/taggerold/Type/: BufferList.hs  Config.hs
app/taggerold/Type/Model/: Prim.hs
app/taggerold/Util/: Core.hs
app/yuitagger/: Config.hs  Main.hs  Util.hs
app/yuitagger/CLI/: Data.hs
app/yuitagger/Data/: Event.hs  Model.hs
app/yuitagger/Data/Model/: Core.hs  Lens.hs
app/yuitagger/Interface/: Handler.hs  Theme.hs
app/yuitagger/Interface/Handler/: Internal.hs
app/yuitagger/Interface/Widget/Internal/: DescriptorTree.hs  FileDetail.hs  FilePreview.hs  Query.hs  Selection.hs
lib/Data/: HierarchyMap.hs  HierarchyTree.hs  OccurrenceHashMap.hs  OccurrenceMap.hs  Tagger.hs
lib/Data/Hierarchy/: Internal.hs
lib/Data/OccurrenceHashMap/: Internal.hs
lib/Data/OccurrenceMap/: Internal.hs
lib/Database/: Tagger.hs  YuiTagger.hs
lib/Database/Tagger/: Connection.hs  Query.hs  Script.hs  Type.hs
lib/Database/Tagger/Query/: Basic.hs  Type.hs
lib/Database/Tagger/Type/: Lens.hs  Prim.hs
lib/Database/YuiTagger/: Connection.hs  Query.hs  Script.hs  Type.hs
lib/Database/YuiTagger/Query/: Type.hs
lib/Database/YuiTagger/Type/: Lens.hs  Prim.hs
lib/Tagger/: Info.hs  Util.hs
lib/Text/: QueryParser.hs  TaggerQL.hs
lib/Text/QueryParser/: Internal.hs
lib/Text/TaggerQL/: AST.hs  Compiler.hs  Expression.hs  Parser.hs  QueryGen.hs
lib/Text/TaggerQL/AST/: Lens.hs  Ring.hs
lib/Text/TaggerQL/Engine/: Query.hs  QueryEngine.hs
lib/Text/TaggerQL/Engine/QueryEngine/: Query.hs  Type.hs
lib/Text/TaggerQL/Expression/: AST.hs  Engine.hs  Interpreter.hs  Parser.hs  QueryEngine.hs
lib/Text/TaggerQL/Expression/AST/: Editor.hs
lib/Text/TaggerQL/Expression/Interpreter/: Internal.hs
lib/Text/TaggerQL/NewAST/: AST.hs  AST.lhs  Parser.hs
lib/Text/TaggerQL/Parser/: Internal.hs
lib/Text/YuiQL/: AST.hs  Engine.hs  Parser.hs
lib/Text/YuiQL/AST/: Editor.hs
lib/YuiTagger/: Info.hs  Util.hs
lib/tagger-exe-internal/Tagger/: Shared.hs
lib/tagger-shared-config/System/Tagger/: Config.hs
lib/tagger/Data/: HierarchyMap.hs  Tagger.hs
lib/tagger/Data/OccurrenceMap/: Internal.hs
lib/tagger/Database/Tagger/: Connection.hs  Query.hs  Script.hs  Type.hs
lib/tagger/Tagger/: Util.hs
lib/tagger/Text/: TaggerQL.hs
lib/tagger/Text/TaggerQL/: AST.hs
nanovg-hs/: nanovg.cabal  stack.yaml
nanovg-hs/src/NanoVG/Internal/: FFIHelpers.hs
resources/: TaggerSchemaDefinition.sql  TaggerSchemaTeardown.sql
resources/Patch/: patch_2_0.sql
test/: Main.hs
test/Database/Tagger/: Main.hs
test/NewAST/: Main.hs
test/Test/: Resources.hs
test/Test/Database/Tagger/: Main.hs
test/Test/Text/TaggerQL/Expression/: AST.hs  Engine.hs  Parser.hs
test/Test/Text/YuiQL/: AST.hs  Engine.hs  Parser.hs
test/Text/TaggerQL/Expression/: Engine.hs
test/resources/: test_database_tagger.db.rsc  test_images_db.rsc
test/tagger-lib/: TaggerLibTest.hs
test/tagger-lib/Test/Data/: HierarchyMap.hs
test/tagger-lib/Test/Database/: Tagger.hs
test/tagger-lib/Test/Text/: QueryParser.hs
test/tagger-lib/Test/Text/TaggerQL/: Parser.hs
