cabal-version:       2.4

name:                tagger
version:             0.1.0.0
synopsis:            A graphical front-end for a file tagging library
-- description:
-- bug-reports:
license:             GPL-3.0-only
license-file:        LICENSE
author:              monawasensei
maintainer:          monawasensei@gmail.com
-- copyright:
category:            Database
extra-source-files:  CHANGELOG.md

executable TaggerGUI
  main-is:             Main.hs

  other-modules:       Node.Base
                      ,Node.Color
                      ,Node.Micro
                      ,Type.Model
                      ,Type.Model.Prim

  other-extensions:    OverloadedStrings
                      ,TemplateHaskell
                      ,FlexibleInstances
                      ,FunctionalDependencies

  ghc-options:         -threaded

  build-depends:       base ^>=4.13.0.0
                      ,monomer == 1.3.0.0
                      ,lens
                      ,text
                      ,tagger-db
                      ,transformers
  hs-source-dirs:      app
  default-language:    Haskell2010
