cabal-version:       2.4

name:                tagger
version:             0.3.4.2
synopsis:            A file/image tagger that connects to or initializes sqlite databases.
-- description:
-- bug-reports:
license:             GPL-3.0-only
license-file:        LICENSE
author:              monawasensei
maintainer:          monawasensei@gmail.com
-- copyright:
category:            Database
extra-source-files:  CHANGELOG.md

common tagger-common
  default-language:    Haskell2010

  ghc-options:        -Wall

  other-extensions:    OverloadedStrings
                      ,TemplateHaskell
                      ,FlexibleInstances
                      ,FunctionalDependencies

  build-depends:       base ^>=4.13.0.0
                      ,lens == 5.1
                      ,text == 1.2.4.0
                      ,transformers == 0.5.6.2
                      ,hashable == 1.4.0.2
                      ,containers == 0.6.2.1
                      ,unordered-containers == 0.2.18.0                      

executable tagger
  import:              tagger-common
  main-is:             Main.hs

  other-modules:       Node.Application
                      ,Node.Color
                      ,Node.Micro
                      ,Event.Task
                      ,Event.Handler
                      ,Event.Parser
                      ,Event.CLI
                      ,Event.CLI.Type
                      ,Type.Model
                      ,Type.Model.Prim
                      ,Type.Config
                      ,Type.BufferList
                      ,Database.Tagger.Type
                      ,Database.Tagger.Access
                      ,Database.Tagger.Access.RowMap
                      ,Database.Tagger.Script
                      ,IO
                      ,Util.Core
                      ,Paths_tagger

  other-extensions:    MagicHash
                      ,DeriveGeneric
                      ,DeriveFunctor
                      ,RankNTypes
                      ,ExistentialQuantification
                      ,TupleSections
                      ,MultiParamTypeClasses

  ghc-options:         -threaded
                       -Wno-orphans

  build-depends:       monomer == 1.4.1.0
                      ,directory == 1.3.6.0
                      ,filepath == 1.4.2.1
                      ,process == 1.6.9.0
                      ,sqlite-simple == 0.4.18.0
                      ,direct-sqlite == 2.3.26
                      ,tomland == 1.3.3.1
                      ,random == 1.2.1
                      ,random-shuffle == 0.0.4
                      ,parsec == 3.1.14.0
                      ,time == 1.9.3
                      ,type-iso
                      ,raw-strings-qq
                      ,tagger-lib
  hs-source-dirs:      app

library tagger-lib
  import:              tagger-common

  exposed-modules:     Database.Tagger
                      ,Database.Tagger.Type
                      ,Data.HierarchyMap

  other-modules:       Database.Tagger.Script
                      ,Database.Tagger.Type.Lens
                      ,Database.Tagger.Type.Prim

  other-extensions:    DeriveGeneric
                      ,DeriveAnyClass
                      ,OverloadedLists

  hs-source-dirs:      lib

  -- ghc-options:

  build-depends:       sqlite-simple == 0.4.18.0
                      ,direct-sqlite == 2.3.26
                      ,raw-strings-qq

  default-language:    Haskell2010