cabal-version:       2.4

name:                tagger
version:             2.0.0.0
synopsis:            A file/image tagger that connects to or initializes sqlite databases.
-- description:
-- bug-reports:
license:             GPL-3.0-only
license-file:        LICENSE
author:              monawasensei
maintainer:          monawasensei@gmail.com
-- copyright:
category:            Database
extra-source-files:  CHANGELOG.md
data-files:          Yui_signature_SS.bmp
                    ,Yui_signature_SS.png
                    ,iosevka_thin.ttf
                    ,iosevka_regular.ttf
                    ,iosevka_bold.ttf
                    ,TaggerSchemaDefinition.sql
                    ,TaggerSchemaTeardown.sql
                    ,Patch/
                     
common haskell-common
  default-language:    Haskell2010

  ghc-options:         -Wall

  build-depends:       base ^>= 4.13.0.0
                      ,Cabal

common tagger-common
  other-extensions:    OverloadedStrings
                      ,TemplateHaskell
                      ,FlexibleContexts
                      ,FlexibleInstances
                      ,FunctionalDependencies
                      ,StrictData
                      ,ViewPatterns

  other-modules:       Paths_tagger

  build-depends:       lens == 5.1
                      ,text == 1.2.4.0
                      ,transformers == 0.5.6.2
                      ,hashable == 1.4.0.2
                      ,containers == 0.6.2.1
                      ,unordered-containers == 0.2.18.0

executable tagger
  import:              haskell-common
                      ,tagger-common

  main-is:             Main.hs

  other-modules:       Config
                      ,CLI.Data
                      ,CLI.Data.Lens
                      ,Data.Event
                      ,Data.Model
                      ,Data.Model.Core
                      ,Data.Model.Lens
                      ,Data.Model.Shared
                      ,Data.Model.Shared.Core
                      ,Data.Model.Shared.Lens
                      ,Interface
                      ,Interface.Handler
                      ,Interface.Handler.Internal
                      ,Interface.Theme
                      ,Interface.Widget
                      ,Interface.Widget.Internal.Core
                      ,Interface.Widget.Internal.DescriptorTree
                      ,Interface.Widget.Internal.FileDetail
                      ,Interface.Widget.Internal.FilePreview
                      ,Interface.Widget.Internal.InfoPanel
                      ,Interface.Widget.Internal.Query
                      ,Interface.Widget.Internal.Selection
                      ,Interface.Widget.Internal.Type
                      ,Util

  other-extensions:   RankNTypes
                     ,MultiWayIf

  -- ghc-options:

  build-depends:      tagger-lib
                      ,monomer == 1.4.1.0
                      ,directory == 1.3.6.0
                      ,filepath == 1.4.2.1
                      ,random
                      ,process
                      ,tomland
                      ,optparse-applicative                      

  hs-source-dirs:      app/tagger


library tagger-lib
  import:              haskell-common
                      ,tagger-common

  exposed-modules:     Database.Tagger
                      ,Database.Tagger.Type
                      ,Data.HierarchyMap
                      ,Data.OccurrenceHashMap
                      ,Data.OccurrenceMap
                      ,Data.Tagger
                      ,Tagger.Info
                      ,Text.TaggerQL
                      ,Text.TaggerQL.Expression.AST
                      ,Text.TaggerQL.Expression.Engine
                      ,Text.TaggerQL.Expression.Parser

  other-modules:       Database.Tagger.Script
                      ,Database.Tagger.Type.Lens
                      ,Database.Tagger.Type.Prim
                      ,Database.Tagger.Query
                      ,Database.Tagger.Query.Type
                      ,Database.Tagger.Connection
                      ,Data.Hierarchy.Internal
                      ,Data.OccurrenceHashMap.Internal
                      ,Data.OccurrenceMap.Internal
                      ,Tagger.Util

  other-extensions:    DeriveGeneric
                      ,DeriveAnyClass
                      ,GeneralisedNewtypeDeriving
                      ,DerivingStrategies
                      ,OverloadedLists
                      ,DeriveFunctor
                      ,DeriveFoldable
                      ,BangPatterns
                      ,QuasiQuotes
                      ,TupleSections
                      ,BangPatterns

  hs-source-dirs:      lib

  -- ghc-options:

  build-depends:       sqlite-simple == 0.4.18.0
                      ,direct-sqlite == 2.3.26
                      ,raw-strings-qq
                      ,time == 1.9.3
                      ,parsec
                      ,directory

  default-language:    Haskell2010

test-suite tagger-test
  import:              tagger-common 
                      ,haskell-common
  
  type:                exitcode-stdio-1.0

  main-is:             Main.hs

  other-modules:
    Test.Text.TaggerQL.Expression.Engine
    ,Test.Text.TaggerQL.Expression.Parser
    ,Test.Resources

  build-depends:       tagger-lib
                      ,tasty
                      ,tasty-hunit
                      ,parsec

  hs-source-dirs:      test/