cabal-version:       2.4

name:                yuitagger
version:             2.0.0.0
synopsis:            A file/image tagger that connects to or initializes sqlite databases.
-- description:
-- bug-reports:
license:             GPL-3.0-only
license-file:        LICENSE
author:              monawasensei
maintainer:          monawasensei@gmail.com
-- copyright:
category:            Database
extra-source-files:  CHANGELOG.md
data-files:          resources/Yui_signature_SS.bmp
                    ,resources/Yui_signature_SS.png
                    ,resources/iosevka_thin.ttf
                    ,resources/iosevka_regular.ttf
                    ,resources/iosevka_bold.ttf
                    ,resources/TaggerSchemaDefinition.sql
                    ,resources/TaggerSchemaTeardown.sql
                    ,resources/Patch/patch_2_0.sql

common haskell-common
  default-language:    Haskell2010

  ghc-options:         -Wall

  build-depends:       base ^>= 4.13.0.0
                      ,Cabal

common yuitagger-common
  other-extensions:    OverloadedStrings
                      ,TemplateHaskell
                      ,FlexibleContexts
                      ,FlexibleInstances
                      ,FunctionalDependencies
                      ,StrictData
                      ,ViewPatterns
                      ,InstanceSigs
                      ,RankNTypes

  other-modules:       Paths_yuitagger

  autogen-modules:     Paths_yuitagger

  build-depends:       text == 1.2.4.0
                      ,transformers == 0.5.6.2
                      ,hashable == 1.4.0.2
                      ,containers == 0.6.2.1
                      ,unordered-containers == 0.2.18.0

executable yuitagger
  import:              haskell-common
                      ,yuitagger-common

  main-is:             Main.hs

  other-modules:       Config
                      ,CLI.Data
                      ,Data.Event
                      ,Data.Model
                      ,Data.Model.Core
                      ,Data.Model.Lens
                      ,Data.Model.Shared
                      ,Data.Model.Shared.Core
                      ,Data.Model.Shared.Lens
                      ,Interface
                      ,Interface.Handler
                      ,Interface.Handler.Internal
                      ,Interface.Theme
                      ,Interface.Widget
                      ,Interface.Widget.Internal.Core
                      ,Interface.Widget.Internal.DescriptorTree
                      ,Interface.Widget.Internal.FileDetail
                      ,Interface.Widget.Internal.FilePreview
                      ,Interface.Widget.Internal.Query
                      ,Interface.Widget.Internal.Selection
                      ,Util

  other-extensions:   RankNTypes
                     ,MultiWayIf
                     ,ExistentialQuantification

  ghc-options:        -threaded

  build-depends:      yuitagger-lib
                      ,lens == 5.1
                      ,monomer == 1.5.0.0
                      ,directory == 1.3.6.0
                      ,filepath == 1.4.2.1
                      ,random
                      ,process
                      ,tomland
                      ,optparse-applicative                      

  hs-source-dirs:      app/yuitagger


library yuitagger-lib
  import:              haskell-common
                      ,yuitagger-common

  exposed-modules:     Database.YuiTagger
                      ,Database.YuiTagger.Type
                      ,Data.HierarchyMap
                      ,Data.OccurrenceMap
                      ,YuiTagger.Info
                      ,Text.YuiQL.AST
                      ,Text.YuiQL.Engine
                      ,Text.YuiQL.Parser

  other-modules:       Database.YuiTagger.Script
                      ,Database.YuiTagger.Type.Lens
                      ,Database.YuiTagger.Type.Prim
                      ,Database.YuiTagger.Query
                      ,Database.YuiTagger.Query.Type
                      ,Database.YuiTagger.Connection
                      ,Data.Hierarchy.Internal
                      ,Data.OccurrenceMap.Internal
                      ,YuiTagger.Util
                      ,Text.YuiQL.AST.Editor

  other-extensions:    DeriveGeneric
                      ,DeriveAnyClass
                      ,GeneralisedNewtypeDeriving
                      ,DerivingStrategies
                      ,OverloadedLists
                      ,DeriveFunctor
                      ,DeriveFoldable
                      ,BangPatterns
                      ,QuasiQuotes
                      ,TupleSections
                      ,BangPatterns

  hs-source-dirs:      lib

  -- ghc-options:

  build-depends:       sqlite-simple == 0.4.18.0
                      ,microlens
                      ,microlens-th
                      ,direct-sqlite == 2.3.26
                      ,raw-strings-qq
                      ,time == 1.9.3
                      ,parsec
                      ,directory == 1.3.6.0
                      ,filepath == 1.4.2.1

  default-language:    Haskell2010

test-suite yuitagger-test
  import:              yuitagger-common 
                      ,haskell-common
  
  type:                exitcode-stdio-1.0

  main-is:             Main.hs

  other-modules:
    Test.Text.YuiQL.AST
    ,Test.Text.YuiQL.Engine
    ,Test.Text.YuiQL.Parser
    ,Test.Resources

  build-depends:       yuitagger-lib
                      ,tasty
                      ,tasty-hunit
                      ,tasty-quickcheck
                      ,parsec

  hs-source-dirs:      test/